# ApocalypseSnow

./: .gitignore  ApocalypseSnow.sln  go.mod
ApocalypseSnow/: AnimationManager.cs  AnimationManagerRed.cs  ApocalypseSnow.csproj  Ball.cs  BasePlatform.cs  CollisionExtensions.cs  CollisionManager.cs  CollisionRecordIn.cs  Egg.cs  EggsEvent.cs  EndMatchStruct.cs  Events.cs  Game1.cs  GameSession.cs  IAnimation.cs  IMovements.cs  InputList.cs  JoinAckStruct.cs  JoinStruct.cs  MessageType.cs  MovementsManager.cs  MovementsManagerRed.cs  NetworkManager.cs  Obstacle.cs  Penguin.cs  PenguinColliderHandler.cs  PenguinInputHandler.cs  PenguinShotHandler.cs  PhysicsAPI.cs  PhysicsOtherAPI.cs  PhysicsWrapper.cs  Program.cs  Reconciler.cs  ShotStruct.cs  ShotType.cs  StateList.cs  StateStruct.cs  Vector.cs  app.manifest
ApocalypseSnow/Content/: Content.mgcb
Physics/: CMakeLists.txt  library.cpp  library.h
Server/: collision_manager.go  collision_record.go  game_room.go  library.h  main.go  matchmaker.go  models.go  old_main.go  physics_api.go  physics_wrapper.go  player_connection.go  protocol.go  run_server.cmd  shot.go
Shared/: .gitkeep
